# CrateTV

./: README.md  TODO.md
crate_tv/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  vite.config.ts
crate_tv/assets/styling/: echo.css  following.css  main.css  watch.css
crate_tv/src/: app.css  app.html  main.rs
crate_tv/src/components/: echo.rs  mod.rs  video.rs
crate_tv/src/routes/: +layout.svelte  +page.svelte  +page.ts  Header.svelte  Sidebar.svelte  StreamsGrid.svelte
crate_tv/src/routes/[name]/: +page.svelte  +page.ts  HLSStreamer.svelte
crate_tv/src/routes/account/: +page.svelte
crate_tv/src/types/: Streamer.ts
crate_tv/src/views/: account.rs  following.rs  home.rs  mod.rs  navbar.rs  watch.rs
crate_tv_app/: Cargo.toml
crate_tv_app/src/: main.rs
crate_tv_server/: Cargo.toml  permissions_to_add.md
crate_tv_server/src/: account.rs  dummy.rs  main.rs  stream.rs
crate_tv_server/src/account/: data.rs  mod.rs  permission.rs  session.rs
