[package]
name = "crate_tv"
version = "0.1.0"
authors = ["Pyxrs <pyxrss@gmail.com>"]
edition = "2021"

[dependencies]
# Shared
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "1379de7", features = [
    "router",
    "fullstack",
] }

# Server
pstd = { git = "https://github.com/Pyxrs/pstd", features = [
    "uuid",
], optional = true }
rtmp = { version = "0.6", optional = true }

[features]
default = ["server"]

web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

server = ["dioxus/server", "pstd", "rtmp"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
