[package]
name = "crate_tv"
version = "0.1.0"
authors = ["Pyxrs <pyxrss@gmail.com>"]
edition = "2021"

[dependencies]
pstd = { git = "https://github.com/Pyxrs/pstd", features = ["uuid", "async"] }
actix-web = "4"
actix-governor = "0.8"
tokio = { version = "1", features = ["full"] }

argon2 = "0.5"
env_logger = "0.11"
jsonwebtoken = "9.3"
password-hash = "0.5"
rtmp = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "sqlite",
    "macros",
    "runtime-tokio",
    "tls-native-tls",
] }
